--- a/gb/20/1/17/n11799230.md
+++ b/gb/20/1/17/n11799230.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/zsifxm298/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zsifxm298/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>大陆债券违约大增 投资者维权艰难纷纷离场</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2009/05/811190953321497-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2009/05/811190953321497-600x400.jpg" />
 <h6></h6>
 <hr>
-<p>【大纪元2020年01月17日讯】随着大陆债券<a href="https://github.com/zsifxm298/djy/blob/master/gb/tag/%E8%BF%9D%E7%BA%A6.md">违约</a>越来越多，购买债券的投资者损失惨重，他们的权益得不到保障，很多投资者从证券市场撤出。</p>
-<p>2019年，大陆债券<a href="https://github.com/zsifxm298/djy/blob/master/gb/tag/%E8%BF%9D%E7%BA%A6.md">违约</a>创下了历史高位，大陆企业违约债券数量接近180只，金额超过1400亿元（人民币，下同），遍布28个省级行政区。其中民企违约最多，但也包含部分国企。</p>
+	<p>【大纪元2020年01月17日讯】随着大陆债券<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E8%BF%9D%E7%BA%A6.md#1">违约</a>越来越多，购买债券的投资者损失惨重，他们的权益得不到保障，很多投资者从证券市场撤出。</p>
+<p>2019年，大陆债券<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E8%BF%9D%E7%BA%A6.md#1">违约</a>创下了历史高位，大陆企业违约债券数量接近180只，金额超过1400亿元（人民币，下同），遍布28个省级行政区。其中民企违约最多，但也包含部分国企。</p>
 <p>面对巨额违约，越来越多的借款人要么无法偿还债权人的初始投资，要么无法定期支付利息，投资回报正在日益缩水。据金融信息提供商Wind的数据显示，2016年，46%的违约借款人以某些方式向债券持有人支付了本金或利息。而去年，这一比例降至13%。</p>
 <p>据《金融时报》消息，对于大陆的很多债券投资者来说，追回欠款变得代价过于高昂。</p>
 <p>穆迪（Moody&#8217;s）驻香港分析师钟汶权（Ivan Chung）表示：“由于缺乏处理企业违约的机制，债务回收的不确定性太大。”</p>
@@ -16,43 +16,45 @@
 <p>钟汶权表示，这促使许多投资者离开（债券）市场。</p>
 <p>对于大陆债券违约大增，评论人士文小刚认为，债券违约增多，投资者回报减少离场将造成大陆融资困难，会对经济发展造成伤害，对经济增长造成不良循环。</p>
 <p>责任编辑：刘毅 #</p>
-
+	
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/17/n11799230.htm">大陆债券违约大增 投资者维权艰难纷纷离场</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11795725.htm">青海城投爆8.5亿美元债违约危机 标普降级</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11788857.htm">贸易协议中共会违约吗？各方关注</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788182.htm">陆企2019境外债违约36亿美元  今年或更多</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11773276.htm">新年首周 深圳国资曝5000万债务违约</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/6/n11772898.htm">为华为生产产品 航天科工旗下企业违约45亿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11758448.htm">2019陆企违约逾1400亿 遍及28省 北京最多</a></li>
-> <li><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11789475.md">云南城投集团债务缠身 甩卖资产求生</a></li>
-> <li><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/28/n11750541.md">中国外债达到2万亿美元 创新高</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11796992.htm">【翻墙必看】中共对官员推奇葩要求 贻笑天下</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11797366.htm">越南现2宗疑似武汉肺炎病例 全球8地响警报</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11794395.htm">大陆路面为何频频发生塌陷事件</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11796694.htm">中美贸易协议解读 金融服务领域八大要点</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/4/24/n7677815.htm">家有贤妻  福荫陶门几代人！</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11777539.htm">“蓝出于青”的幽默才子纪晓岚</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740761.htm">“轮回之说”何处来？古老中国的轮回观</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/9/n11778583.htm">【命理】算命能指导一个人发财吗？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11796241.htm">伊朗在变天 中共或失去打击美国的王牌</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11790802.htm">中共外交部胡言乱语实录</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11793980.htm">【唐靖远快评】武统台湾？中共恐有心无力</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11793882.htm">【拍案惊奇】美击杀模式曝光 对伊战略适用中俄</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11796541.htm">【拍案惊奇】首阶段贸易协议 中美各让步什么？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11795863.htm">【新闻看点】川刘大阵势签协议 北京被逼上架</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11794403.htm">澎恰恰重摔致髋骨错位 坐轮椅录影吓坏众人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788549.htm">田蕊妮不再续约无线 杜汶泽笑言：替TVB难过</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11791826.htm">网民：看了这段短片就知道伊朗“不可怕”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11796365.htm">大陆演艺圈大洗牌？杨紫2019年最走红</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11795438.htm">子瑜放假游荷兰及比利时 羽绒衣裹身也纤细</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/19/12/31/n11758448.md#1">2019陆企违约逾1400亿 遍及28省 北京最多</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/1/6/n11772898.md#1">为华为生产产品 航天科工旗下企业违约45亿</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/1/6/n11773276.md#1">新年首周 深圳国资曝5000万债务违约</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/1/12/n11788182.md#1">陆企2019境外债违约36亿美元  今年或更多</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799230.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/3/n10757209.md#1" target="_blank">共产暴政录：红四方面军在四川杀民众百万</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/20/n11466682.md#1" target="_blank">患脑瘤等死 中共总参工程师炼法轮功后痊愈</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751943.md#1">【新闻看点】特斯拉裁员10% 全球大衰退将至？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750400.md#1">这类人压力大却最长寿！3招抗压 远离衰老疾病</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/17/n11799230.htm">大陆债券违约大增 投资者维权艰难纷纷离场</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/20/1/17/n11799230.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
